styles/index.scss
@import "project_page";
@import "story_page";
@import "nav";

@tailwind base;
@tailwind components;
@tailwind utilities;

@media (max-height: 767px) {
  * {
    -webkit-tap-highlight-color: transparent;
  }
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Amatic SC', cursive;
}

p, span, a, li {
  font-family: 'Raleway', "Open Sans", sans-serif;
}

@layer utilities {
  @variants responsive {
    .top-1 {
      top: 1rem;
    }

    .top-2 {
      top: 2rem;
    }

    .top-3 {
      top: 3rem;
    }

    .top-4 {
      top: 4rem;
    }

    .top-5 {
      top: 5rem;
    }
  }

  .w-85 {
    width: 34rem;;
  }


  .font-reggae {
    font-family: 'Reggae One', cursive;
  }

  .font-amatic {
    font-family: 'Amatic SC', cursive;
  }

  .fade-in {
    animation: fadeIn ease 4s;
    -webkit-animation: fadeIn ease 4s;
  }

  .fade-out {
    animation: fadeOut ease 1s;
    animation-fill-mode: forwards;
  }

}

.white {
  color: white;
}

@media (min-width: 768px) {
  .mobile-only {
    display: none;
  }
}

@media (max-width: 768px) {
  .desktop-only {
    display: none;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  30% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fadeOut {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

/* EXPLORATION ROCK */

.roche {
  z-index: 10;
  position: relative;
  margin: auto;
  transition: filter 0.5s;
  text-align: center;
}

@media (min-height: 767px) {

  .roche {
    filter: brightness(0);

    &[data-depth="3"], &[data-depth="3"] .roche-img {
      width: 200px;
      height: 200px;
      background-size: 200px 200px;
    }

    &[data-depth="2"], &[data-depth="2"] .roche-img {
      width: 170px;
      height: 170px;
      background-size: 170px 170px;
    }

    &[data-depth="1"], &[data-depth="1"] .roche-img {
      width: 150px;
      height: 150px;
      background-size: 150px 150px;
    }

  }

  .roche .text {
    opacity: 0;
    color: #dedede;
  }
}

@media (max-height: 767px) {
  .roche {
    &[data-depth="3"], &[data-depth="3"] .roche-img {
      width: 100px;
      height: 100px;
      background-size: 100px 100px;
    }

    &[data-depth="2"], &[data-depth="2"] .roche-img {
      width: 90px;
      height: 90px;
      background-size: 90px 90px;
    }

    &[data-depth="1"], &[data-depth="1"] .roche-img {
      width: 80px;
      height: 80px;
      background-size: 80px 80px;
    }
    .text {
      color: white;
    }
  }


}

.roche .text {
  width: 60%;
  transition: opacity 0.5s;
}

.roche:hover .text {
  opacity: 1;
  color: white;
  transition: opacity 0.5s;
}

.roche-img {
  background-repeat: no-repeat;
  display: flex;
  align-items: center;
  justify-content: center;
  filter: drop-shadow(-3px 9px 7px black);
  background-position: center;
}

.roche:hover {
  transition: filter 0.5s;
  filter: brightness(1.5);
  -webkit-filter: brightness(1.5);
}


/* HOME PAGE */
.homepage-explore {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  padding-top: 55vh;
}

.homepage-explore > svg {
  z-index: 1;
  margin: 10px;
  width: 140px;
  height: auto;
}

.homepage-explore > span {
  top: 66px;
  left: 20px;
  font-size: 32px;
}

.homepage-explore > svg .light-beam {
  opacity: 0;
  transition: fill 0.3s;
}

.homepage-explore > svg:hover .light-beam {
  fill: #e54c21 !important;
  opacity: 1;
  transition: fill 0.3s;
}

.homepage-explore > svg, .homepage-explore > span {
  cursor: pointer;
}

@media (min-width: 768px) {
  .homepage-footer {
    padding-top: calc(100vh - 336px);
  }
}

@media (max-width: 767px) {
  .homepage-footer {
    padding-top: calc(100vh - 560px);
  }
}

@media (min-width: 767px) {
  .homepage-explore {
    position: absolute;
  }
}

//@media (max-width: 1024px) {
//  .homepage-explore {
//    display: none;
//  }
//}


/* ------ Exploration Page ------- */

body {
  background-color: black;
}

//@media(max-width: 1050px) {
//  .exploration {
//    display: none;
//  }
//}

#exploration {
  margin: auto;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  max-width: 100%;
  max-height: 100%;
  pointer-events: all;
}

#exploration .fonds {
  z-index: 1;
  background-size: cover;
  background-repeat: no-repeat;
  filter: brightness(1.2);
  position: absolute;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

#exploration .returnLink {
  position: absolute;
  border-radius: 73px;
  margin-left: 5px;
  margin-top: 5px;
  transition: 0.3s ease;
}

#exploration .returnLink:hover {
  //background-color: #000000b5;
  text-shadow: #000 2px 2px 1px;
  transition: 0.3s ease;
}

#exploration .returnLink a {
  display: flex;
  padding: 20px;
  text-decoration: none;
  color: white;
  font-weight: bold;
}

svg.exploration {
  width: 100vw;
  height: 100vh;
  cursor: none;
  color: #0b0b0b;
  // #circle-shadow {
  //     fill: black;
  // }
}

